# WiFiAudit-Pro

./: .gitignore  README.md  pyproject.toml  requirements.txt  scope.example.json
tests/: test_attack.py  test_audit_logger.py  test_default_creds_db.py  test_encryption_analyzer.py  test_mitre.py  test_report_parser.py  test_risk_scoring.py  test_scope_manager.py
wifiaudit_pro/: __init__.py
wifiaudit_pro/analysis/: __init__.py  default_creds_db.py  encryption_analyzer.py  risk_scoring.py  wps_detector.py
wifiaudit_pro/attack/: __init__.py
wifiaudit_pro/capture/: __init__.py
wifiaudit_pro/core/: __init__.py  audit_logger.py  config.py  scope_manager.py
wifiaudit_pro/mitre/: __init__.py
wifiaudit_pro/reporting/: __init__.py  html_exporter.py  json_exporter.py  report_builder.py
wifiaudit_pro/reporting/templates/: report_template.html
wifiaudit_pro/scanner/: __init__.py  channel_utils.py  passive_scanner.py
wifiaudit_pro/ui/: __init__.py  cli.py  gui_tkinter.py
