[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wifiaudit-pro"
version = "1.0.0"
description = "WiFi Security Auditing Tool — Authorized use only"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Shadow-King-Cyber"},
]
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "scapy>=2.5"]

[project.scripts]
wifiaudit = "wifiaudit_pro.ui.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
